updated image importation

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ footer img{
   <body>
     <header>
       
-      <img src="C:\Users\hp\Downloads\ChatGPT Image Apr 27, 2025, 12_29_18 PM.png" alt="hotel logo">
+      <img src="myimages/ChatGPT Image Apr 27, 2025, 12_29_18 PM.png" alt="hotel logo">
     </header>
     <ul>
      <li class="active" ><a href="main-page.html">Home</a></li>
@@ -386,7 +386,7 @@ footer img{
 
     <div class="flex-container">
     <div class="gallery">
-      <img src="C:\Users\hp\Downloads\sandip-roy-jEx-gDIB0CI-unsplash.jpg" alt="image" style="margin-left:0px;" >
+      <img src="myimages/sandip-roy-jEx-gDIB0CI-unsplash.jpg" alt="image" style="margin-left:0px;" >
       <div class="desc">The Royal Suite</div>
       <a href="about-page1.html"  style="color: rgb(110, 129, 143); text-align:center; text-decoration:underline; align-items:center; margin-left:150px;" >LEARN MORE</a>
       <div class="button">
@@ -398,7 +398,7 @@ footer img{
       </div>
       <div class="flex-container">
         <div class="gallery">
-      <img src="C:\Users\hp\Downloads\antonio-araujo-mbOoyHwNsWU-unsplash.jpg" alt="image" style="margin-left:0px;"> 
+      <img src="myimages/antonio-araujo-mbOoyHwNsWU-unsplash.jpg" alt="image" style="margin-left:0px;"> 
       
        <div class="desc">The Honeymoon Suite</div>
       <a href="learn-more1.html"  style="color: rgb(110, 129, 143); text-align:center; text-decoration:underline; align-items:center; margin-left:150px;" >LEARN MORE</a>
@@ -411,7 +411,7 @@ footer img{
       </div>
       <div class="flex-container">
         <div class="gallery">
-          <img src="C:\Users\hp\Downloads\datingscout-KFDuhyW5H5w-unsplash.jpg" alt="image"  style="margin-left:0px;">
+          <img src="myimages/datingscout-KFDuhyW5H5w-unsplash.jpg" alt="image"  style="margin-left:0px;">
           <div class="desc">The Family Suite</div>
           <a href="learn-more2.html"  style="color: rgb(110, 129, 143); text-align:center; text-decoration:underline; align-items:center; margin-left:150px;" >LEARN MORE</a>
           <div class="button">  
@@ -475,7 +475,7 @@ footer img{
    <a href="social.html" style=" color:black; font-size: medium;">SOCIAL WALL</a>
     </div>
     <div class="footer">
-    <img src="C:\Users\hp\Downloads\ChatGPT Image Apr 27, 2025, 12_29_18 PM.png" alt="hotel logo" 
+    <img src="myimages/ChatGPT Image Apr 27, 2025, 12_29_18 PM.png" alt="hotel logo" 
    >
 
    <div class="container">
